fixed default popup visibility

--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,8 @@
     height: 200px;
     border: 3px solid black;
     background-color: aliceblue;
+    display: none;
 }
 
 .add-project-header {
-    font-size: 30px;
 }
